--- a/simple.html
+++ b/simple.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <!--
 	Copyright 2017 Git.Transing	
-	Some silly changes from master branch
 -->
 <head>
-	<title>Logs of Trouble</title>
+	<title>Logs of Trouble, in a little repo</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
