Done with simple.html updates

--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 	Copyright 2017 Git.Transing	
 -->
 <head>
-	<title>Logs of Trouble, in a little repo</title>
+	<title>Updating  Title for Stash Example</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
